[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/GamePopup.gd" type="Script" id=1]
[ext_resource path="res://scenes/CustomCursor.tscn" type="PackedScene" id=2]



[node name="Popup" type="Popup"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = true
script = ExtResource( 1 )
_sections_unfolded = [ "Mouse", "Pause", "Popup", "Size Flags" ]
keyboard_enabled = false

[node name="CustomCursor" parent="." index="0" instance=ExtResource( 2 )]

[connection signal="about_to_show" from="." to="." method="_on_about_to_show"]

[connection signal="popup_hide" from="." to="." method="_on_popup_hide"]


